--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
 #paragrafo1{
     text-align:center;
+    font-size:medium;
+    color:aquamarine;
     border:5px solid grey;
+}
+.titulo{
+    font-size:3rem;
+    color:cadetblue;
+    text-align:center;
+}
+.fonte-grande{
+    font-size:40px;
+}
+.sublinhado{
+    text-decoration:underline;
+}
+.texto{
+    text-align:center;
+    font-size:medium;
+    color:aquamarine
+}
+.borda{
+    border:5px solid grey;
+}
+.fonte{
+    font-family:
 }
