--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     display:flex;
 }
 .container{
-    max-width:fit-content;
+    max-width:500px;
     margin:0 auto;
     border:1px solid #ccc;
 }
