--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@
     display:flex;
 }
 .container{
-    max-width:fit-content;
-    max-height:fit-content;
+    max-width:max-content;
+    max-height:max-content;
     margin:0 auto;
     border:1px solid #ccc;
 }
