--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     text-decoration:underline;
 }
 .texto{
-    text-align:center;
+    text-align:justify;
     font-size:2rem;
     color:rgb(85, 114, 67)
 }
