--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ display:right;
     position:fixed;
 }
 .fundo{
-    background-color: beige;
+    background-color: bisque;
 }
 .margem{
     margin:0 auto;
