--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 .texto{
     text-align:center;
     font-size:2rem;
-    color:rgb(85, 114, 67)
+    color:black
 }
 .borda{
     border:5px solid grey;
