--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ display:right;
 }
 .fundo{
     background-color: beige;
+
+    background-image:url(image\ 10.png) ;
 }
 .margem{
     margin:0 auto;
